# fastapi_i18n_plugin

./: README.md  __init__.py  pyproject.toml
